--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "body-parser": "^1.19.0",
         "ejs": "^3.0.2",
         "express": "^4.17.1",
+        "express-fileupload": "^1.1.7-alpha.3",
         "express-session": "^1.17.1",
         "mongoose": "^5.9.9",
         "react": "^16.13.1",
