--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
         "typescript": "^3.7.5"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "server": "nodemon src/server/index.js",
+        "start": "nodemon src/server/index.js",
+        "react-start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
