--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
         "typescript": "^3.7.5"
     },
     "scripts": {
-        "start": "nodemon src/server/index.js",
+        "start": "node src/server/index.js",
+        "server": "nodemon src/server/index.js",
         "react-start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
