--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     },
     "scripts": {
         "start": "node src/server/index.js",
-        "server": "nodemon src/server/index.js",
+        "server": "env-cmd -f ./.env nodemon src/server/index.js",
         "react-start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
