--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
         "@types/node": "^12.12.35",
         "@types/react": "^16.9.34",
         "@types/react-dom": "^16.9.6",
+        "bcrypt": "^4.0.1",
         "body-parser": "^1.19.0",
         "ejs": "^3.0.2",
         "express": "^4.17.1",
         "express-fileupload": "^1.1.7-alpha.3",
         "express-session": "^1.17.1",
         "mongoose": "^5.9.9",
+        "passport": "^0.4.1",
+        "passport-local": "^1.0.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-scripts": "3.4.1",
