--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@types/react-dom": "^16.9.6",
         "bcrypt": "^4.0.1",
         "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
         "ejs": "^3.0.2",
         "express": "^4.17.1",
         "express-fileupload": "^1.1.7-alpha.3",
